# contact_manager

./: .gitignore  contact_manager.py  interface.py  manager.py  pyproject.toml  testin.py  workflow.sh
data/db/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-2145014853429579338.wt  collection-2-2145014853429579338.wt  collection-30-2145014853429579338.wt  collection-4-2145014853429579338.wt  index-1-2145014853429579338.wt  index-3-2145014853429579338.wt  index-31-2145014853429579338.wt  index-32-2145014853429579338.wt  index-5-2145014853429579338.wt  index-6-2145014853429579338.wt  sizeStorer.wt
data/db/diagnostic.data/: metrics.2023-09-22T14-53-51Z-00000  metrics.interim
